--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </main>
     <footer>
         <img src="images/hackLogo_v3.png" alt="Footer logo image" id="footerImg">
-        <p id="footerP">Download the app to keep track of your plants.</p>
+        <p id="footerP"><a href="https://tinyurl.com/plantkillers">Download the app</a> to keep track of your plants.</p>
     </footer>
     
     <script src="js/script.js"></script>
